# realtime_termgraph

./: Cargo.toml
src/: canvas.rs  function.rs  lib.rs  main.rs  point.rs  scatter_plot.rs
src/lib/: canvas.rs  scatter_plot.rs
